[package]
name = "jam"
description = "WIPWIPWIP"
license = "MIT OR Apache-2.0 OR CC0-1.0"
authors = [
    "Jan Hohenheim <jan@hohenheim.ch>",
    "Joe Buehler <jbuehler23@gmail.com>",
    "Joona Aalto <jondolf.dev@gmail.com>",
    "Freyja Dunlin <freyjamoth@gmail.com>",
    "Nico Zweifel <nicozweifel@gmail.com>",
    "Atlas Dostal <email@atlasdostal.com>",
]
version = "0.1.0"
edition = "2024"
exclude = ["assets"]
readme = "readme.md"
keywords = ["bevy", "demo", "3d", "game"]
repository = "https://github.com/Bevy-Jam-7/jam"
categories = ["game-development"]
homepage = "https://janhohenheim.itch.io/jam"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "gltf_animation",
    "bevy_asset",
    "bevy_anti_alias",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "mesh_picking",
    "bevy_pbr",
    "bevy_picking",
    "bevy_post_process",
    "bevy_render",
    "bevy_gizmos_render",
    "bevy_scene",
    "bevy_sprite",
    "sprite_picking",
    "bevy_state",
    "bevy_text",
    "bevy_ui_render",
    "ui_picking",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "jpeg",
    "tga",
    "ktx2",
    "png",
    "wayland",
    "zstd_rust",
    "reflect_auto_register",
] }
bevy_enhanced_input = "0.23"

# physics
avian3d = "0.6.0-rc.1"
avian_pickup = "0.5.0-rc.1"

# character controller
bevy_ahoy = "0.1.0-rc.1"

# navigation
bevy_landmass = "0.11.0"
landmass_rerecast = "0.2.0"
bevy_rerecast = { version = "0.4.0", default-features = false }
avian_rerecast = "0.5.0-rc.1"

# Level editor
bevy_trenchbroom = "0.12"
bevy_trenchbroom_avian = "0.13.0-rc.1"

# dialogue
bevy_yarnspinner = "0.7"
bevy_yarnspinner_example_dialogue_view = "0.7"

bevy_shuffle_bag = "0.4.0"
bevy-inspector-egui = { version = "0.36", optional = true }
bevy_fix_cursor_unlock_web = "0.3.0"
bevy_framepace = "0.21"
bevy_seedling = "0.7.0"

# Keep this in sync with Bevy
rand = "0.9"

# Compile low-severity logs out of web builds for performance.
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
getrandom = { version = "0.3", default-features = false, features = [
    "wasm_js",
] }

bitflags = "2"
anyhow = "1"
regex = "1"
bincode = "2"
# Latest version that works with bevy_seedling
wasm-bindgen = { version = "=0.2.108", optional = true }

bevy_hanabi = { version = "0.18", default-features = false, features = [
    "3d",
    "gpu_tests",
] }

[features]
default = [
    # Default to a native dev build.
    "dev_native",
]
native = []
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    # Improve error messages coming from Bevy
    "bevy/track_location",
    "dep:bevy-inspector-egui",
    "avian3d/diagnostic_ui",
    "bevy_rerecast/debug_plugin",
    "bevy_rerecast/editor_integration",
]
dev_native = [
    "dev",
    "native",
    "bevy/bevy_remote",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
    "bevy_rerecast/editor_integration",
]
web = ["bevy/webgpu", "bevy_seedling/web_audio", "dep:wasm-bindgen"]
release = []

[package.metadata.bevy_cli]
default-features = false

[package.metadata.bevy_cli.native]
features = ["native"]

[package.metadata.bevy_cli.native.dev]
features = ["dev_native"]

[package.metadata.bevy_cli.native.release]
features = ["release"]

[package.metadata.bevy_cli.web]
features = ["web"]

[package.metadata.bevy_cli.web.dev]
features = ["dev"]

[package.metadata.bevy_cli.web.release]
features = ["release"]

[package.metadata.bevy_cli.unstable]
web-multi-threading = true

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"


# Compile with Performance Optimizations:
# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.release.package.wgpu-types]
debug-assertions = false

[patch.crates-io]
ash = { path = "vendor/ash" }
avian_derive = { path = "vendor/avian_derive" }
avian_pickup = { path = "vendor/avian_pickup" }
avian_rerecast = { path = "vendor/avian_rerecast" }
avian3d = { path = "vendor/avian3d" }
bevy = { path = "vendor/bevy" }
bevy_a11y = { path = "vendor/bevy_a11y" }
bevy_ahoy = { path = "vendor/bevy_ahoy" }
bevy_android = { path = "vendor/bevy_android" }
bevy_animation = { path = "vendor/bevy_animation" }
bevy_animation_macros = { path = "vendor/bevy_animation_macros" }
bevy_anti_alias = { path = "vendor/bevy_anti_alias" }
bevy_app = { path = "vendor/bevy_app" }
bevy_asset = { path = "vendor/bevy_asset" }
bevy_asset_macros = { path = "vendor/bevy_asset_macros" }
bevy_camera = { path = "vendor/bevy_camera" }
bevy_color = { path = "vendor/bevy_color" }
bevy_core_pipeline = { path = "vendor/bevy_core_pipeline" }
bevy_derive = { path = "vendor/bevy_derive" }
bevy_dev_tools = { path = "vendor/bevy_dev_tools" }
bevy_diagnostic = { path = "vendor/bevy_diagnostic" }
bevy_dylib = { path = "vendor/bevy_dylib" }
bevy_ecs = { path = "vendor/bevy_ecs" }
bevy_ecs_macros = { path = "vendor/bevy_ecs_macros" }
bevy_egui = { path = "vendor/bevy_egui" }
bevy_encase_derive = { path = "vendor/bevy_encase_derive" }
bevy_enhanced_input = { path = "vendor/bevy_enhanced_input" }
bevy_enhanced_input_macros = { path = "vendor/bevy_enhanced_input_macros" }
bevy_fix_cursor_unlock_web = { path = "vendor/bevy_fix_cursor_unlock_web" }
bevy_framepace = { path = "vendor/bevy_framepace" }
bevy_gilrs = { path = "vendor/bevy_gilrs" }
bevy_gizmos = { path = "vendor/bevy_gizmos" }
bevy_gizmos_macros = { path = "vendor/bevy_gizmos_macros" }
bevy_gizmos_render = { path = "vendor/bevy_gizmos_render" }
bevy_gltf = { path = "vendor/bevy_gltf" }
bevy_hanabi = { path = "vendor/bevy_hanabi" }
bevy_heavy = { path = "vendor/bevy_heavy" }
bevy_image = { path = "vendor/bevy_image" }
bevy_input = { path = "vendor/bevy_input" }
bevy_input_focus = { path = "vendor/bevy_input_focus" }
bevy_internal = { path = "vendor/bevy_internal" }
bevy_landmass = { path = "vendor/bevy_landmass" }
bevy_light = { path = "vendor/bevy_light" }
bevy_log = { path = "vendor/bevy_log" }
bevy_macro_utils = { path = "vendor/bevy_macro_utils" }
bevy_materialize = { path = "vendor/bevy_materialize" }
bevy_math = { path = "vendor/bevy_math" }
bevy_mesh = { path = "vendor/bevy_mesh" }
bevy_mikktspace = { path = "vendor/bevy_mikktspace" }
bevy_pbr = { path = "vendor/bevy_pbr" }
bevy_picking = { path = "vendor/bevy_picking" }
bevy_platform = { path = "vendor/bevy_platform" }
bevy_post_process = { path = "vendor/bevy_post_process" }
bevy_ptr = { path = "vendor/bevy_ptr" }
bevy_reflect = { path = "vendor/bevy_reflect" }
bevy_reflect_derive = { path = "vendor/bevy_reflect_derive" }
bevy_remote = { path = "vendor/bevy_remote" }
bevy_render = { path = "vendor/bevy_render" }
bevy_render_macros = { path = "vendor/bevy_render_macros" }
bevy_rerecast = { path = "vendor/bevy_rerecast" }
bevy_rerecast_core = { path = "vendor/bevy_rerecast_core" }
bevy_rerecast_editor_integration = { path = "vendor/bevy_rerecast_editor_integration" }
bevy_scene = { path = "vendor/bevy_scene" }
bevy_seedling = { path = "vendor/bevy_seedling" }
bevy_seedling_macros = { path = "vendor/bevy_seedling_macros" }
bevy_shader = { path = "vendor/bevy_shader" }
bevy_shuffle_bag = { path = "vendor/bevy_shuffle_bag" }
bevy_sprite = { path = "vendor/bevy_sprite" }
bevy_sprite_render = { path = "vendor/bevy_sprite_render" }
bevy_state = { path = "vendor/bevy_state" }
bevy_state_macros = { path = "vendor/bevy_state_macros" }
bevy_tasks = { path = "vendor/bevy_tasks" }
bevy_text = { path = "vendor/bevy_text" }
bevy_time = { path = "vendor/bevy_time" }
bevy_transform = { path = "vendor/bevy_transform" }
bevy_transform_interpolation = { path = "vendor/bevy_transform_interpolation" }
bevy_trenchbroom = { path = "vendor/bevy_trenchbroom" }
bevy_trenchbroom_avian = { path = "vendor/bevy_trenchbroom_avian" }
bevy_trenchbroom_macros = { path = "vendor/bevy_trenchbroom_macros" }
bevy_ui = { path = "vendor/bevy_ui" }
bevy_ui_render = { path = "vendor/bevy_ui_render" }
bevy_utils = { path = "vendor/bevy_utils" }
bevy_window = { path = "vendor/bevy_window" }
bevy_winit = { path = "vendor/bevy_winit" }
bevy_yarnspinner = { path = "vendor/bevy_yarnspinner" }
bevy_yarnspinner_example_dialogue_view = { path = "vendor/bevy_yarnspinner_example_dialogue_view" }
bevy-inspector-egui = { path = "vendor/bevy-inspector-egui" }
bevy-inspector-egui-derive = { path = "vendor/bevy-inspector-egui-derive" }
cosmic-text = { path = "vendor/cosmic-text" }
cpal = { path = "vendor/cpal" }
glam = { path = "vendor/glam" }
glam_matrix_extras = { path = "vendor/glam_matrix_extras" }
glamx = { path = "vendor/glamx" }
landmass = { path = "vendor/landmass" }
landmass_rerecast = { path = "vendor/landmass_rerecast" }
naga = { path = "vendor/naga" }
naga_oil = { path = "vendor/naga_oil" }
parry3d = { path = "vendor/parry3d" }
parry3d-f64 = { path = "vendor/parry3d-f64" }
rerecast = { path = "vendor/rerecast" }
wgpu = { path = "vendor/wgpu" }
wgpu-core = { path = "vendor/wgpu-core" }
wgpu-core-deps-apple = { path = "vendor/wgpu-core-deps-apple" }
wgpu-core-deps-windows-linux-android = { path = "vendor/wgpu-core-deps-windows-linux-android" }
wgpu-hal = { path = "vendor/wgpu-hal" }
wgpu-types = { path = "vendor/wgpu-types" }
wide = { path = "vendor/wide" }